Fix tooltip align

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* override Tooltip */
+.w-fit {
+    width: initial;
+}
